# web_scraper

./: README.md  pyproject.toml
scraper/: scraper.py
scraper/scrapers/: base.py  crypto.py
web-scraper/models/: item.py
web-scraper/scrapers/: __init__.py
web_scraper/: scraper.py
web_scraper/scrapers/: __init__.py  base.py  crypto.py
