[tool.poetry]
name = "web_scraper"
version = "0.1.0"
description = "simple web scraper"
authors = ["mariusvi <marius@vilkaitis.lt>"]
readme = "README.md"
packages = [{include = "web_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
bs4 = "^0.0.1"
tqdm = "^4.64.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
